--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -239,7 +239,7 @@ input {
 }
 
 .field_with_errors {
-	@extend .control-group;
+	@extend .control-group !optional; /* todo shouldn't it be .form-group instead? https://getbootstrap.com/docs/3.4/migration/ */
 	@extend .error;
 }
 
