--- a/app/assets/stylesheets/resources.scss
+++ b/app/assets/stylesheets/resources.scss
@@ -35,11 +35,11 @@
 }
 
   .resources-streams-header {
-    @extend .panel-heading;
+    @extend .panel-heading !optional; /* todo */
   }
 
   .resources-streams-body {
-   @extend .panel-body;
+   @extend .panel-body !optional; /* todo */
    padding: 0;
   }
 
@@ -90,7 +90,7 @@ ul {
 
 .button {
   @extend .btn;
-  @extend .btn-primary;
+  @extend .btn-primary !optional; /* todo */
   float: right;
   width: 12em;
   margin: 0.6em;
